assignment1/src/main/d96/parser/.antlr/D96Parser.py
# Generated from c:\Users\Test\Downloads\PPL_212\assignment1\src\main\d96\parser\D96.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'Break'", "'Foreach'", "'Boolean'", "'Null'", 
                     "'Continue'", "'True'", "'String'", "'If'", "'False'", 
                     "'Elseif'", "'Array'", "'Int'", "'Else'", "'Float'", 
                     "'Var'", "'Val'", "'Return'", "'New'", "'In'", "'By'", 
                     "'Class'", "'Constructor'", "'Destructor'", "'Self'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'||'", "'&&'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'='", 
                     "'==.'", "'+.'", "'..'", "'.'", "'('", "')'", "'{'", 
                     "'}'", "';'", "'['", "']'", "'::'", "':'", "','" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "STRING", "COMMENT", 
                      "BREAKTYPE", "FOREACHTYPE", "BOOLEANTYPE", "NULLTYPE", 
                      "CONTINUETYPE", "TRUETYPE", "STRINGTYPE", "IF", "FALSETYPE", 
                      "ELSEIF", "ARRAYTYPE", "INTTYPE", "ELSE", "FLOATTYPE", 
                      "VARTYPE", "CONSTTYPE", "RETURNTYPE", "NEW", "INKEY", 
                      "BYKEY", "CLASSTYPE", "CONSTRUCTORTYPE", "DESTRUCTORTYPE", 
                      "SELFTYPE", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", 
                      "OR", "AND", "EQUAL", "NOTEQUAL", "LESS", "GREATER", 
                      "LESSEQUAL", "GREATEREQUAL", "ASSIGN", "STRINGEQUAL", 
                      "CONCATENATION", "DOTDOT", "DOT", "LB", "RB", "LP", 
                      "RP", "SEMI", "LSB", "RSB", "TWOCOLON", "COLON", "COMMA", 
                      "DOLLAR_ID", "ID", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_TOKEN" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_lhs = 2
    RULE_scalavar = 3
    RULE_ifstatement = 4
    RULE_forstatement = 5
    RULE_breakstatement = 6
    RULE_continuestatement = 7
    RULE_returnstatement = 8
    RULE_blockstatement = 9
    RULE_invokemethod = 10
    RULE_exp = 11
    RULE_exp1 = 12
    RULE_exp2 = 13
    RULE_exp3 = 14
    RULE_exp4 = 15
    RULE_exp5 = 16
    RULE_exp6 = 17
    RULE_exp7 = 18
    RULE_exp8 = 19
    RULE_exp9 = 20
    RULE_exp10 = 21
    RULE_operands = 22
    RULE_classname = 23
    RULE_construct = 24
    RULE_destruct = 25
    RULE_method = 26
    RULE_parameters = 27
    RULE_idlist = 28
    RULE_attr = 29
    RULE_vardecl = 30
    RULE_explist = 31
    RULE_datatype = 32
    RULE_arraynested = 33
    RULE_arrayindex = 34
    RULE_value = 35
    RULE_booln = 36

    ruleNames =  [ "program", "statement", "lhs", "scalavar", "ifstatement", 
                   "forstatement", "breakstatement", "continuestatement", 
                   "returnstatement", "blockstatement", "invokemethod", 
                   "exp", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", 
                   "exp7", "exp8", "exp9", "exp10", "operands", "classname", 
                   "construct", "destruct", "method", "parameters", "idlist", 
                   "attr", "vardecl", "explist", "datatype", "arraynested", 
                   "arrayindex", "value", "booln" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    STRING=3
    COMMENT=4
    BREAKTYPE=5
    FOREACHTYPE=6
    BOOLEANTYPE=7
    NULLTYPE=8
    CONTINUETYPE=9
    TRUETYPE=10
    STRINGTYPE=11
    IF=12
    FALSETYPE=13
    ELSEIF=14
    ARRAYTYPE=15
    INTTYPE=16
    ELSE=17
    FLOATTYPE=18
    VARTYPE=19
    CONSTTYPE=20
    RETURNTYPE=21
    NEW=22
    INKEY=23
    BYKEY=24
    CLASSTYPE=25
    CONSTRUCTORTYPE=26
    DESTRUCTORTYPE=27
    SELFTYPE=28
    ADD=29
    SUB=30
    MUL=31
    DIV=32
    MOD=33
    NOT=34
    OR=35
    AND=36
    EQUAL=37
    NOTEQUAL=38
    LESS=39
    GREATER=40
    LESSEQUAL=41
    GREATEREQUAL=42
    ASSIGN=43
    STRINGEQUAL=44
    CONCATENATION=45
    DOTDOT=46
    DOT=47
    LB=48
    RB=49
    LP=50
    RP=51
    SEMI=52
    LSB=53
    RSB=54
    TWOCOLON=55
    COLON=56
    COMMA=57
    DOLLAR_ID=58
    ID=59
    WS=60
    UNCLOSE_STRING=61
    ILLEGAL_ESCAPE=62
    ERROR_TOKEN=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classname(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassnameContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassnameContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 74
                self.classname()
                self.state = 77 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASSTYPE):
                    break

            self.state = 79
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lhs(self):
            return self.getTypedRuleContext(D96Parser.LhsContext,0)


        def ifstatement(self):
            return self.getTypedRuleContext(D96Parser.IfstatementContext,0)


        def forstatement(self):
            return self.getTypedRuleContext(D96Parser.ForstatementContext,0)


        def returnstatement(self):
            return self.getTypedRuleContext(D96Parser.ReturnstatementContext,0)


        def continuestatement(self):
            return self.getTypedRuleContext(D96Parser.ContinuestatementContext,0)


        def breakstatement(self):
            return self.getTypedRuleContext(D96Parser.BreakstatementContext,0)


        def invokemethod(self):
            return self.getTypedRuleContext(D96Parser.InvokemethodContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(D96Parser.VardeclContext,0)


        def blockstatement(self):
            return self.getTypedRuleContext(D96Parser.BlockstatementContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_statement




    def statement(self):

        localctx = D96Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.lhs()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.ifstatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.forstatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.returnstatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.continuestatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 86
                self.breakstatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 87
                self.invokemethod()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 88
                self.vardecl()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 89
                self.blockstatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LhsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(D96Parser.ASSIGN, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExpContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExpContext,i)


        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def scalavar(self):
            return self.getTypedRuleContext(D96Parser.ScalavarContext,0)


        def exp7(self):
            return self.getTypedRuleContext(D96Parser.Exp7Context,0)


        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.LSB)
            else:
                return self.getToken(D96Parser.LSB, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.RSB)
            else:
                return self.getToken(D96Parser.RSB, i)

        def getRuleIndex(self):
            return D96Parser.RULE_lhs




    def lhs(self):

        localctx = D96Parser.LhsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lhs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 92
                self.scalavar()
                pass

            elif la_ == 2:
                self.state = 93
                self.exp7(0)
                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 94
                    self.match(D96Parser.LSB)
                    self.state = 95
                    self.exp()
                    self.state = 96
                    self.match(D96Parser.RSB)
                    self.state = 100 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==D96Parser.LSB):
                        break

                pass


            self.state = 104
            self.match(D96Parser.ASSIGN)
            self.state = 105
            self.exp()
            self.state = 106
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScalavarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def exp8(self):
            return self.getTypedRuleContext(D96Parser.Exp8Context,0)


        def DOT(self):
            return self.getToken(D96Parser.DOT, 0)

        def TWOCOLON(self):
            return self.getToken(D96Parser.TWOCOLON, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_scalavar




    def scalavar(self):

        localctx = D96Parser.ScalavarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_scalavar)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(D96Parser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.exp8(0)
                self.state = 110
                self.match(D96Parser.DOT)
                self.state = 111
                self.match(D96Parser.ID)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(D96Parser.ID)
                self.state = 114
                self.match(D96Parser.TWOCOLON)
                self.state = 115
                self.match(D96Parser.DOLLAR_ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(D96Parser.IF, 0)

        def LB(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.LB)
            else:
                return self.getToken(D96Parser.LB, i)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExpContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExpContext,i)


        def RB(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.RB)
            else:
                return self.getToken(D96Parser.RB, i)

        def blockstatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.BlockstatementContext)
            else:
                return self.getTypedRuleContext(D96Parser.BlockstatementContext,i)


        def ELSEIF(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ELSEIF)
            else:
                return self.getToken(D96Parser.ELSEIF, i)

        def ELSE(self):
            return self.getToken(D96Parser.ELSE, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_ifstatement




    def ifstatement(self):

        localctx = D96Parser.IfstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_ifstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(D96Parser.IF)
            self.state = 119
            self.match(D96Parser.LB)
            self.state = 120
            self.exp()
            self.state = 121
            self.match(D96Parser.RB)
            self.state = 122
            self.blockstatement()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==D96Parser.ELSEIF:
                self.state = 123
                self.match(D96Parser.ELSEIF)
                self.state = 124
                self.match(D96Parser.LB)
                self.state = 125
                self.exp()
                self.state = 126
                self.match(D96Parser.RB)
                self.state = 127
                self.blockstatement()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.ELSE:
                self.state = 134
                self.match(D96Parser.ELSE)
                self.state = 135
                self.blockstatement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOREACHTYPE(self):
            return self.getToken(D96Parser.FOREACHTYPE, 0)

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def scalavar(self):
            return self.getTypedRuleContext(D96Parser.ScalavarContext,0)


        def INKEY(self):
            return self.getToken(D96Parser.INKEY, 0)

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ExpContext)
            else:
                return self.getTypedRuleContext(D96Parser.ExpContext,i)


        def DOTDOT(self):
            return self.getToken(D96Parser.DOTDOT, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def blockstatement(self):
            return self.getTypedRuleContext(D96Parser.BlockstatementContext,0)


        def BYKEY(self):
            return self.getToken(D96Parser.BYKEY, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_forstatement




    def forstatement(self):

        localctx = D96Parser.ForstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_forstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.match(D96Parser.FOREACHTYPE)
            self.state = 139
            self.match(D96Parser.LB)
            self.state = 140
            self.scalavar()
            self.state = 141
            self.match(D96Parser.INKEY)
            self.state = 142
            self.exp()
            self.state = 143
            self.match(D96Parser.DOTDOT)
            self.state = 144
            self.exp()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.BYKEY:
                self.state = 145
                self.match(D96Parser.BYKEY)
                self.state = 146
                self.exp()


            self.state = 149
            self.match(D96Parser.RB)
            self.state = 150
            self.blockstatement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAKTYPE(self):
            return self.getToken(D96Parser.BREAKTYPE, 0)

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_breakstatement




    def breakstatement(self):

        localctx = D96Parser.BreakstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_breakstatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(D96Parser.BREAKTYPE)
            self.state = 153
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinuestatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTINUETYPE(self):
            return self.getToken(D96Parser.CONTINUETYPE, 0)

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_continuestatement




    def continuestatement(self):

        localctx = D96Parser.ContinuestatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_continuestatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(D96Parser.CONTINUETYPE)
            self.state = 156
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURNTYPE(self):
            return self.getToken(D96Parser.RETURNTYPE, 0)

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_returnstatement




    def returnstatement(self):

        localctx = D96Parser.ReturnstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(D96Parser.RETURNTYPE)
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.INT) | (1 << D96Parser.FLOAT) | (1 << D96Parser.STRING) | (1 << D96Parser.NULLTYPE) | (1 << D96Parser.TRUETYPE) | (1 << D96Parser.FALSETYPE) | (1 << D96Parser.ARRAYTYPE) | (1 << D96Parser.NEW) | (1 << D96Parser.SELFTYPE) | (1 << D96Parser.SUB) | (1 << D96Parser.NOT) | (1 << D96Parser.LB) | (1 << D96Parser.ID))) != 0):
                self.state = 159
                self.exp()


            self.state = 162
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockstatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.StatementContext)
            else:
                return self.getTypedRuleContext(D96Parser.StatementContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_blockstatement




    def blockstatement(self):

        localctx = D96Parser.BlockstatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_blockstatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(D96Parser.LP)
            self.state = 168
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.INT) | (1 << D96Parser.FLOAT) | (1 << D96Parser.STRING) | (1 << D96Parser.BREAKTYPE) | (1 << D96Parser.FOREACHTYPE) | (1 << D96Parser.NULLTYPE) | (1 << D96Parser.CONTINUETYPE) | (1 << D96Parser.TRUETYPE) | (1 << D96Parser.IF) | (1 << D96Parser.FALSETYPE) | (1 << D96Parser.ARRAYTYPE) | (1 << D96Parser.VARTYPE) | (1 << D96Parser.CONSTTYPE) | (1 << D96Parser.RETURNTYPE) | (1 << D96Parser.NEW) | (1 << D96Parser.SELFTYPE) | (1 << D96Parser.LB) | (1 << D96Parser.LP) | (1 << D96Parser.ID))) != 0):
                self.state = 165
                self.statement()
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvokemethodContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(D96Parser.LB, 0)

        def RB(self):
            return self.getToken(D96Parser.RB, 0)

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def exp8(self):
            return self.getTypedRuleContext(D96Parser.Exp8Context,0)


        def DOT(self):
            return self.getToken(D96Parser.DOT, 0)

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def TWOCOLON(self):
            return self.getToken(D96Parser.TWOCOLON, 0)

        def DOLLAR_ID(self):
            return self.getToken(D96Parser.DOLLAR_ID, 0)

        def explist(self):
            return self.getTypedRuleContext(D96Parser.ExplistContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_invokemethod




    def invokemethod(self):

        localctx = D96Parser.InvokemethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_invokemethod)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 173
                self.exp8(0)
                self.state = 174
                self.match(D96Parser.DOT)
                self.state = 175
                self.match(D96Parser.ID)
                pass
